# Youth_Plan_AI-Inha

./: .env.example  .gitignore  PLAN.md  README.md
api/: Dockerfile  pyproject.toml
api/app/: axes.py  config.py  dev.py  firestore.py  gemini.py  interview.py  knowledge.py  logging.py  main.py  prompts.py  report.py  scoring.py  session.py  trailer.py
api/fixtures/: junwoo.json  mina.json  ssu.json
api/prompts/: axes.md  compression.md  rubric.md  structuring.md  system.md
api/scripts/: upload_plan.py
web/: .dockerignore  .env.local.example  Dockerfile  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: axis-reasons.tsx  city-type-card.tsx  dev-fixture-dialog.tsx  interview-screen.tsx  mobile-shell.tsx  report-overview.tsx  result-loading.tsx  result-screen.tsx  revision-form.tsx  share-actions.tsx
web/src/components/ui/: confirm-dialog.tsx
web/src/data/: city_types.json
web/src/fonts/: OFL.txt
web/src/lib/: api.ts  city-axes.ts  share-card.ts  typewriter.ts
